- fix, reduce the size of the .MenuBlock elements (when selecting a tower, the menu was too wide) - fix, adding towers

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ body
 
 .MenuBlock
     {
-    min-width: 150px;
-    margin: 0 20px;
+    min-width: 130px;
+    margin: 0 10px;
     }
 
 .button
